oc_resources/DeploymentConfig.yaml
kind: DeploymentConfig
apiVersion: apps.openshift.io/v1
metadata:
  name: springboot-oc-hello-git
  namespace: oc-spring-hello
  labels:
    app: springboot-oc-hello-git
    app.kubernetes.io/component: springboot-oc-hello-git
    app.kubernetes.io/instance: springboot-oc-hello-git
    app.kubernetes.io/name: springboot-oc-hello-git
    app.kubernetes.io/part-of: springboot-oc-hello-git-app
    app.openshift.io/runtime: java
    app.openshift.io/runtime-version: openjdk-11-ubi8
spec:
  strategy:
    type: Rolling
    rollingParams:
      updatePeriodSeconds: 1
      intervalSeconds: 1
      timeoutSeconds: 600
      maxUnavailable: 25%
      maxSurge: 25%
    resources: {}
    activeDeadlineSeconds: 21600
  triggers:
    - type: ImageChange
      imageChangeParams:
        automatic: true
        containerNames:
          - springboot-oc-hello-git
        from:
          kind: ImageStreamTag
          namespace: oc-spring-hello
          name: 'springboot-oc-hello-git:latest'
    - type: ConfigChange
  replicas: 1
  revisionHistoryLimit: 10
  test: false
  selector:
    app: springboot-oc-hello-git
    deploymentconfig: springboot-oc-hello-git
  template:
    metadata:
      labels:
        app: springboot-oc-hello-git
        deploymentconfig: springboot-oc-hello-git
    spec:
      containers:
        - name: springboot-oc-hello-git
          image: >-
            image-registry.openshift-image-registry.svc:5000/oc-spring-hello/springboot-oc-hello-git
          ports:
            - containerPort: 8080
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
